sumo/tests/sumo/output/e2/errors/lane_missing/errors.sumo
Error: The description of the detector '4/1to3/1' does not contain a needed value.
Quitting (on error).
